--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,184 @@
-body{
-  background-color: orange;
-  background-blend-mode: lighten;
-  height: 1100px;
+*{
+
+  padding: 0;
+  margin: 0;
+
 }
+
+body {
+  overflow-x: hidden;
+  font-family: 'Open Sans', sans-serif;
+  text-rending: optimizLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+}
+
+li {
+  list-style: none;
+  display: inline-block;
+}
+
+a {
+  text-decoration none;
+  transition: all 500ms ease-in-out;
+}
+
+a:hover
+a:active {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h4 {
+  font-family: 'PT Sans Narrow', Arial, sans-sarif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+p {
+  font-size: 15px
+  line-height: 21px;
+}
+
+.btn:hover {
+  background-color: #ededed !important;
+  color: #3c3c3c !important;
+  border: 1px solide #fff !important;
+}
+
+/*NAVIGATION*/
+.navbar {
+  background-color: #222222 !important;
+  text-transform: uppercase;
+  font-family: 'PT Sans Narrow', Arial, sans-serif;
+  font-weight: 700;
+}
+
+.navbar a {
+  color: #fff !important;
+  opacity: 0.7;
+}
+
+.navbar a:hover {
+  opacity: 1;
+  background-color #111111 !important;
+}
+
+/*Header*/
+
+.header {
+  height: 600px;
+  width: 100%;
+  padding: 30px 0 30px;
+  margin-top: 50px;
+  background-image: url("../images/image3.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
+}
+
+.header h1 {
+  color: #006666;
+  font-weight: bold;
+}
+
+/*Services*/
+
+.services {
+  padding: 80px 0 80px;
+  text-align: center;
+}
+
+.services h2, .services h4 {
+  color: #4c4c4c;
+  margin: 20px 0 20px;
+}
+
+.services p {
+  color: #737373;
+  font-size:14px;
+  padding-bottom: 40px;
+}
+
+.services i {
+  height: 80px;
+  width: 80px;
+  font-size: 30px;
+  padding: 25px 20px;
+  border-radius: 50%;
+  background-color: #01ADDB;
+  color: #fff;
+}
+
+/*Pricing*/
+
+.pricing {
+  padding: 50px 0 80px;
+  text-align: center;
+  background-image: url("../images/image8.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
+}
+
+.pricing h2,
+.pricing p {
+  color: #fff
+}
+
+.pricing p {
+  padding-bottom: 40px;
+}
+
+.pricing .packages {
+  padding: 30px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  border-radius: 5px;
+  margin-top: 30px;
+}
+
+.packages li {
+  display: block;
+  padding: 5px;
+}
+
+.packages h4,
+.packages h1,
+.packages b {
+  color: #4c4c4c;
+}
+
+.packages p,
+.packages li {
+  color: #737373;
+}
+
+.packages button {
+  margin-top: 10px;
+}
+
+/*Team*/
+
+.team {
+  padding: 50px 0 80px;
+  text-align: center;
+}
+
+.team b,
+.team h2,
+.team h4 {
+  margin: 20px 0 20px;
+  color: #4c4c4c;
+}
+
+.team p {
+  color: #737373;
+}
+
+/*jQuery*/
 
 .form-group{
   width:25%;
@@ -18,45 +194,9 @@ body{
   margin-right: 10px;
 }*/
 
-.container-fluid{
-  background-image: url('./images/background-img.png');
-  background-blend-mode: lighten;
-}
-
-.navbar-nav{
-  margin-left: 780px;
-}
-
-.container-fluid{
-  width: 1400px;
-}
-
-.fixed-bottom{
-  background-color:gray;
-  text-align: center;
-  padding-bottom: 15px;
-  color:white;
-}
-
-.p-3 {
-  padding: $spacer !important;
-}
-
-.itemStyle{
-  background-color:gray;
-}
-
 #delete {
   cursor:pointer;
   float:right;
   color:red;
   font-weight: bold;
-}
-
-
-#footer{
-  background-color:gray;
-  text-align: center;
-  padding-bottom: 15px;
-  color:white;
 }
